--- a/index.html
+++ b/index.html
@@ -3,128 +3,129 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-  <title>Xianhua Zeng</title>
+    <title>Xianhua Zeng</title>
 
-  <style type="text/css">
-    * { margin: 0; padding: 0; }
-    body { font: 16px Georgia, Serif; line-height: 24px; }
-    .clear { clear: both; }
-    #page-wrap { width: 800px; margin: 40px auto 60px; }
-    #pic { float: right; margin: -30px 0 0 0; }
-    h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
-    p { margin: 0 0 16px 0; }
-    a:link { color:#b9221f; text-decoration:none; }
-    a:hover { color:#771614; text-decoration:underline; }
-    a:visited { color:#93584D; }
-    ul { margin: 0 0 32px 17px; }
-    #objective { width: 500px; float: left; }
-    #objective p { font-style: italic; color: #666; }
-    dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
-    dd { width: 615px; float: right; }
-    dd.clear { float: none; margin: 0; height: 15px; }
-  </style>
-  <!-- www.xianhuazeng.com Google analytics -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <style type="text/css">
+      * { margin: 0; padding: 0; }
+      body { font: 16px Georgia, Serif; line-height: 24px; }
+      .clear { clear: both; }
+      #page-wrap { width: 800px; margin: 40px auto 60px; }
+      #pic { float: right; margin: -30px 0 0 0; }
+      h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
+      p { margin: 0 0 16px 0; }
+      a:link { color:#b9221f; text-decoration:none; }
+      a:hover { color:#771614; text-decoration:underline; }
+      a:visited { color:#93584D; }
+      ul { margin: 0 0 32px 17px; }
+      #objective { width: 500px; float: left; }
+      #objective p { font-style: italic; color: #666; }
+      dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
+      dd { width: 615px; float: right; }
+      dd.clear { float: none; margin: 0; height: 15px; }
+    </style>
+    <!-- www.xianhuazeng.com Google analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-65950412-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-</head>
+      ga('create', 'UA-65950412-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+  </head>
 
-<body> 
-<div id="page-wrap"> <img alt="Photo of Cthulu" id="pic" src="images/cthulu.png" /> 
-  <div id="contact-info" class="vcard">
-    <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
-    <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
-       <img width="20" height="20" title="Blog" alt="Blog icon" src="images/blog.png" /></a>
-       <a target="_blank" href="http://www.linkedin.com/in/xianhuazeng">
-       <img width="20" height="20" title="Linkedin" alt="Linkedin icon" src="images/linkedin.png" /></a>
-       <a target="_blank" href="https://github.com/xianhuazeng">
-       <img width="20" height="20" title="Github" alt="Github icon" src="images/github.png" /></a>
-       <a target="_blank" href="https://twitter.com/xianhuazeng">
-       <img width="20" height="20" title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a>
-       <a target="_blank" href="http://www.facebook.com/huazizeng">
-       <img width="20" height="20" title="Facebook" alt="Facebook icon" src="images/facebook.png" /></a>
-       <a target="_blank" href="http://plus.google.com/u/0/106689784596989502614/about">
-       <img width="20" height="20" title="Google+" alt="Google+ icon" src="images/google.png" /></a><br />        
-       Email:&nbsp;<a href="mailto:huazizeng@gmail.com"><img alt="Xianhua Zeng" style="margin-bottom:-5px" src="images/email.png"/></a>
-    </p> 
-  </div> 
-  <div id="objective"> 
-    <p>
-      I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 2 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently. My squid-like head is a masterful problem solver.
-    </p> 
-  </div> 
-  <div class="clear"></div>
-  <dd class="clear"></dd> <dt>Experience</dt> 
-    <dd> 
-      <ul> 
-        <li>2014/11-Present, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
-        <li>2013/7-2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-        <li>2013/4-2013/6, Statistical Programmer (Intern) at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
-      </ul>
-    </dd> 
-  <dd class="clear"></dd> <dt>Paper</dt>
-    <dd>
-      <ul> 
-        <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/china/2016/abstracts.html#PR">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2016</a>, Beijing, 2016/9/09</li>
-        <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/2015/wrapup.html">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
-      </ul>
-    </dd> 
-  <dd class="clear"></dd> <dt>Education</dt>
-    <dd>
-      <ul> 
-        <li>2013/07, Master Degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>
-        <li>2008/07, Bachelor Degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
-      </ul>
-    </dd> 
-  <dd class="clear"></dd> <dt>Certificate</dt> 
-    <dd> 
-      <ul> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, Certified by SAS Institute Inc. (2015)</li> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">Clinical Trials Programmer Using SAS 9 Credential</a>, Certified by SAS Institute Inc. (2014)</li> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">Advanced Programmer for SAS 9 Credential</a>, Certified by SAS Institute Inc. (2013)​</li> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">Base Programmer for SAS 9 Credential</a>, Certified by SAS Institute Inc. (2012)​</li> 
-      </ul>
-    </dd> 
-  <dd class="clear"></dd> <dt>Skills</dt>
-    <dd>
-      <b>Technical Interests</b> 
-        <ul> 
-          <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
-          <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
-          <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Drug Development (SDD)</li> 
-        </ul>
-      <b>Programming and Script Language</b> 
-        <p>Perl, Powershell, HTML, R</p>
-      <b>Relational Database and Operation System</b> 
-        <ul> 
-          <li>SQL Server, Access</li> 
-          <li>Windows, Linux (Ubuntu)</li> 
-        </ul>
-      <b>Domain Knowledge</b> 
-        <ul> 
-          <li>CDISC (CDASH, SDTM, ADaM, ODM, Define.xml)</li> 
-          <li>Pinnacle 21</li> 
-        </ul> 
-    </dd>
-  <dd class="clear"></dd> <dt>Blogs</dt> 
-    <dd> 
-      <ul> 
-        <li>Tech Blog (SAS and Clinical Trials Related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
-        <li>Tech Blog (SAS and Clinical Trials Related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
-      </ul>
-    </dd>
-  <div class="clear"></div> 
-</div> 
-<hr>
-<center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Last modified: 2015-09-20</small></center>
-</body>
+  <body> 
+    <div id="page-wrap"> <img alt="Photo of Cthulu" id="pic" src="images/cthulu.png" /> 
+      <div id="contact-info" class="vcard">
+        <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
+        <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
+           <img width="20" height="20" title="Blog" alt="Blog icon" src="images/blog.png" /></a>
+           <a target="_blank" href="http://www.linkedin.com/in/xianhuazeng">
+           <img width="20" height="20" title="Linkedin" alt="Linkedin icon" src="images/linkedin.png" /></a>
+           <a target="_blank" href="https://github.com/xianhuazeng">
+           <img width="20" height="20" title="Github" alt="Github icon" src="images/github.png" /></a>
+           <a target="_blank" href="https://twitter.com/xianhuazeng">
+           <img width="20" height="20" title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a>
+           <a target="_blank" href="http://www.facebook.com/huazizeng">
+           <img width="20" height="20" title="Facebook" alt="Facebook icon" src="images/facebook.png" /></a>
+           <a target="_blank" href="http://plus.google.com/u/0/106689784596989502614/about">
+           <img width="20" height="20" title="Google+" alt="Google+ icon" src="images/google.png" /></a><br />        
+           Email:&nbsp;<a href="mailto:huazizeng@gmail.com"><img alt="Xianhua Zeng" style="margin-bottom:-5px" src="images/email.png"/></a>
+        </p> 
+      </div> 
+      <div id="objective"> 
+        <p>
+          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 3 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently. My squid-like head is a masterful problem solver.
+        </p> 
+      </div> 
+      <div class="clear"></div>
+      <dd class="clear"></dd> <dt>Experience</dt> 
+        <dd> 
+          <ul>
+            <li>2015/11-Present, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2014/11-2015/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
+            <li>2013/7-2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2013/4-2013/6, Statistical Programmer (Intern) at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
+          </ul>
+        </dd> 
+      <dd class="clear"></dd> <dt>Paper</dt>
+        <dd>
+          <ul> 
+            <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/china/2016/abstracts.html#PR">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2016</a>, Beijing, 2016/9/09</li>
+            <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/2015/wrapup.html">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
+          </ul>
+        </dd> 
+      <dd class="clear"></dd> <dt>Education</dt>
+        <dd>
+          <ul> 
+            <li>2013/07, Master Degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>
+            <li>2008/07, Bachelor Degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
+          </ul>
+        </dd> 
+      <dd class="clear"></dd> <dt>Certificate</dt> 
+        <dd> 
+          <ul> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, Certified by SAS Institute Inc. (2015)</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">Clinical Trials Programmer Using SAS 9 Credential</a>, Certified by SAS Institute Inc. (2014)</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">Advanced Programmer for SAS 9 Credential</a>, Certified by SAS Institute Inc. (2013)​</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">Base Programmer for SAS 9 Credential</a>, Certified by SAS Institute Inc. (2012)​</li> 
+          </ul>
+        </dd> 
+      <dd class="clear"></dd> <dt>Skills</dt>
+        <dd>
+          <b>Technical Interests</b> 
+            <ul> 
+              <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
+              <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
+              <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Drug Development (SDD)</li> 
+            </ul>
+          <b>Programming and Script Language</b> 
+            <p>Perl, Powershell, HTML, R</p>
+          <b>Relational Database and Operation System</b> 
+            <ul> 
+              <li>SQL Server, Access</li> 
+              <li>Windows, Linux (Ubuntu)</li> 
+            </ul>
+          <b>Domain Knowledge</b> 
+            <ul> 
+              <li>CDISC (CDASH, SDTM, ADaM, ODM, Define.xml)</li> 
+              <li>Pinnacle 21</li> 
+            </ul> 
+        </dd>
+      <dd class="clear"></dd> <dt>Blogs</dt> 
+        <dd> 
+          <ul> 
+            <li>Tech Blog (SAS and Clinical Trials Related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
+            <li>Tech Blog (SAS and Clinical Trials Related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
+          </ul>
+        </dd>
+      <div class="clear"></div> 
+    </div> 
+    <hr>
+    <center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Last modified: 2016-11-11</small></center>
+  </body>
 </html>
