--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Drug Development (SDD)</li> 
             </ul>
           <b>Programming and Script Language</b> 
-            <p>Perl, Powershell, HTML, R</p>
+            <p>Perl, Powershell, Python, R, HTML</p>
           <b>Relational Database and Operation System</b> 
             <ul> 
               <li>SQL Server, Access</li> 
