--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
       <dd class="clear"></dd> <dt>Certificate</dt> 
         <dd> 
           <ul> 
-            <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, Certified by SAS Institute Inc. (2015)</li> 
-            <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">Clinical Trials Programmer Using SAS 9 Credential</a>, Certified by SAS Institute Inc. (2014)</li> 
-            <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">Advanced Programmer for SAS 9 Credential</a>, Certified by SAS Institute Inc. (2013)​</li> 
-            <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">Base Programmer for SAS 9 Credential</a>, Certified by SAS Institute Inc. (2012)​</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">Statistical Business Analyst Credential</a>, Certified by SAS Institute Inc. (2015/09/07)</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">Clinical Trials Programmer Credential</a>, Certified by SAS Institute Inc. (2014/12/22)</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">Advanced Programmer Credential</a>, Certified by SAS Institute Inc. (2013/01/16)​</li> 
+            <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">Base Programmer Credential</a>, Certified by SAS Institute Inc. (2012/12/26)​</li> 
           </ul>
         </dd> 
       <dd class="clear"></dd> <dt>Skills</dt>
