Revert "Updated blog description"
This reverts commit 5221bf7a3d73ee5f44036ae55f03d9184892871e.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <dd class="clear"></dd> <dt>Blogs</dt> 
         <dd> 
           <ul> 
-            <li>Blog (Programming and Life, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
+            <li>Tech Blog (SAS and Clinical Trials Related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
             <li>Tech Blog (SAS and Clinical Trials Related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
           </ul>
         </dd>
