Updated footer style

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
       dd { width: 615px; float: right; }
       dd.clear { float: none; margin: 0; height: 15px; }
+      footer{font-size: 15px; color: #999;border-top: 1px solid #cccccc;text-align:center;}
     </style>
     <!-- www.xianhuazeng.com Google analytics -->
     <script>
@@ -119,13 +120,12 @@
       <dd class="clear"></dd> <dt>Blogs</dt> 
         <dd> 
           <ul> 
-            <li>Tech Blog (SAS and Clinical Trials Related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
+            <li>Blog (Programming and Life, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
             <li>Tech Blog (SAS and Clinical Trials Related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
           </ul>
         </dd>
       <div class="clear"></div> 
+      <footer>Hosted by <a href="https://pages.github.com/">GitHub</a> | Last modified: 2016-11-11</footer>
     </div> 
-    <hr>
-    <center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Last modified: 2016-11-11</small></center>
   </body>
 </html>
