--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       a:link { color:#b9221f; text-decoration:none; }
       a:hover { color:#771614; text-decoration:underline; }
       a:visited { color:#93584D; }
-      ul { margin: 0 0 32px 17px; }
+      ul { margin: 0 0 20px 17px; }
       #objective { width: 500px; float: left; }
       #objective p { font-style: italic; color: #666; }
       dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
       dd { width: 615px; float: right; }
-      dd.clear { float: none; margin: 0; height: 15px; }
-      footer{font-size: 15px; color: #999;border-top: 1px solid #cccccc;text-align:center;}
+      dd.clear { float: none; margin: 0; height: 10px; }
+      footer{font-size: 13px; color: #666; border-top: 1px solid #999; text-align:center;}
     </style>
     <!-- www.xianhuazeng.com Google analytics -->
     <script>
