Updated hosting link

--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a href="https://pages.github.com/">GitHub</a> | Last modified: 2016-11-11</footer>
+    <footer>Hosted by <a href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Last modified: 2016-11-11</footer>
   </body>
 </html>
