Added template author in footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <ul> 
               <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
               <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
-              <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Drug Development (SDD)</li> 
+              <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Life Science Analytics Framework (LSAF)</li> 
             </ul>
           <b>Programming and Script Language</b> 
             <p>Perl, Powershell, Python, R, HTML</p>
@@ -126,6 +126,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Last modified: 2016-12-04</footer>
+    <footer>Hosted by <a href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template by <a href="https://css-tricks.com/one-page-resume-site/">Chris Coyier</a> | Last modified: 2017-03-19</footer>
   </body>
 </html>
