--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       body { font: 16px Georgia, Serif; line-height: 24px; }
       .clear { clear: both; }
       #page-wrap { width: 800px; margin: 40px auto 60px; }
-      #pic { float: right; margin: -30px 0 0 0; }
+      #pic { float: right; margin: 50px 0 0 0; }
       h1 { margin: 0 0 10px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
       p { margin: 0 0 10px 0; }
       a:link { color:#b9221f; text-decoration:none; }
       a:hover { color:#771614; text-decoration:underline; }
       a:visited { color:#93584D; }
       ul { margin: 0 0 20px 17px; }
-      #objective { width: 500px; float: left; }
+      #objective { width: 690px; float: left; }
       #objective p { font-style: italic; color: #666; }
       dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
       dd { width: 615px; float: right; }
@@ -40,7 +40,7 @@
   </head>
 
   <body> 
-    <div id="page-wrap"> <img alt="Photo of Cthulu" id="pic" src="images/cthulu.png" /> 
+    <div id="page-wrap"> <img width="110" height="157" alt="Photo of Xianhua Zeng" id="pic" src="images/Xianhua Zeng.jpg"" /> 
       <div id="contact-info" class="vcard">
         <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
         <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
@@ -60,7 +60,7 @@
       </div> 
       <div id="objective"> 
         <p>
-          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 3 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently. My squid-like head is a masterful problem solver.
+          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for almost 4 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
         </p> 
       </div> 
       <div class="clear"></div>
