--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template by <a href="https://css-tricks.com/one-page-resume-site/">Chris Coyier</a> | Last modified: 2017-03-19</footer>
+    <footer>Hosted by <a href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2017-03-19</footer>
   </body>
 </html>
