--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
   </head>
 
   <body> 
-    <div id="page-wrap"> <img width="110" height="157" alt="Photo of Xianhua Zeng" id="pic" src="images/Xianhua Zeng.jpg"" /> 
+    <div id="page-wrap"> <img alt="Photo of Xianhua Zeng" id="pic" src="images/Xianhua Zeng.jpg"" /> 
       <div id="contact-info" class="vcard">
         <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
         <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
-           <img width="20" height="20" title="Blog" alt="Blog icon" src="images/blog.png" /></a>
+           <img title="Blog" alt="Blog icon" src="images/blog.png" /></a>
            <a target="_blank" href="http://www.linkedin.com/in/xianhuazeng">
-           <img width="20" height="20" title="Linkedin" alt="Linkedin icon" src="images/linkedin.png" /></a>
+           <img title="Linkedin" alt="Linkedin icon" src="images/linkedin.png" /></a>
            <a target="_blank" href="https://github.com/xianhuazeng">
-           <img width="20" height="20" title="Github" alt="Github icon" src="images/github.png" /></a>
+           <img title="Github" alt="Github icon" src="images/github.png" /></a>
            <a target="_blank" href="https://twitter.com/xianhuazeng">
-           <img width="20" height="20" title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a>
+           <img title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a>
            <a target="_blank" href="http://www.facebook.com/huazizeng">
-           <img width="20" height="20" title="Facebook" alt="Facebook icon" src="images/facebook.png" /></a>
+           <img title="Facebook" alt="Facebook icon" src="images/facebook.png" /></a>
            <a target="_blank" href="http://plus.google.com/u/0/106689784596989502614/about">
-           <img width="20" height="20" title="Google+" alt="Google+ icon" src="images/google.png" /></a><br />        
+           <img title="Google+" alt="Google+ icon" src="images/google.png" /></a><br />        
            Email:&nbsp;<a href="mailto:huazizeng@gmail.com"><img alt="Xianhua Zeng" style="margin-bottom:-5px" src="images/email.png"/></a>
         </p> 
       </div> 
@@ -126,6 +126,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2017-03-19</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2017-03-19</footer>
   </body>
 </html>
