--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <dd class="clear"></dd> <dt>Experience</dt> 
         <dd> 
           <ul>
-            <li>2016/11-Present, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-            <li>2014/11-2016/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
-            <li>2013/7-2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-            <li>2013/4-2013/6, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
+            <li>2016/11 - Present, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2014/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
+            <li>2013/7 - 2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2013/4 - 2013/6, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
           </ul>
         </dd> 
       <dd class="clear"></dd> <dt>Paper</dt>
