--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
 
   <body> 
-    <div id="page-wrap"> <img alt="Photo of Xianhua Zeng" id="pic" src="images/Xianhua Zeng.jpg"" /> 
+    <div id="page-wrap"> <img alt="Photo of Xianhua Zeng" id="pic" src="images/Xianhua Zeng.jpg" /> 
       <div id="contact-info" class="vcard">
         <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
         <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
