--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li>2013/4 - 2013/6, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
           </ul>
         </dd> 
-      <dd class="clear"></dd> <dt>Paper</dt>
+      <dd class="clear"></dd> <dt>Papers</dt>
         <dd>
           <ul> 
             <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2016/CD/PharmaSUG-China-2016-CD10_v2.pdf">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2016</a>, Beijing, 2016/09/09</li>
@@ -87,7 +87,7 @@
             <li>2008/07, Bachelor Degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
           </ul>
         </dd> 
-      <dd class="clear"></dd> <dt>Certificate</dt> 
+      <dd class="clear"></dd> <dt>Certificates</dt> 
         <dd> 
           <ul> 
             <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">Statistical Business Analyst Credential</a>, Certified by SAS Institute Inc. (2015/09/07)</li> 
