--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div> 
       <div id="objective"> 
         <p>
-          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for almost 4 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
+          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 5 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
         </p> 
       </div> 
       <div class="clear"></div>
@@ -125,6 +125,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2017-03-19</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2018-05-07</footer>
   </body>
 </html>
