--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <dd class="clear"></dd> <dt>Papers</dt>
         <dd>
           <ul>
-            <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/2018/QT/PharmaSUG-2018-QT08.pdf">A Macro to Create Program Inventory for Analysis Data Reviewer’s Guide</a>. <a target="_blank" href="http://www.pharmasug.org/us/index.html/">PharmaSUG 2018</a>, Seattle, 2018/05/01</li>            
-            <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2016/CD/PharmaSUG-China-2016-CD10_v2.pdf">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2016</a>, Beijing, 2016/09/09</li>
-            <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/2015/wrapup.html">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
+            <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/2018/QT/PharmaSUG-2018-QT08.pdf">A Macro to Create Program Inventory for Analysis Data Reviewer’s Guide</a>. <a target="_blank" href="http://www.pharmasug.org/us/index.html/">PharmaSUG 2018</a>, Seattle, WA, USA, 2018/05/01</li>            
+            <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2016/CD/PharmaSUG-China-2016-CD10_v2.pdf">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2016</a>, Beijing, China, 2016/09/09</li>
+            <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/2015/wrapup.html">PharmaSUG China 2015</a>, Shanghai, China, 2015/09/04</li>
           </ul>
         </dd> 
       <dd class="clear"></dd> <dt>Education</dt>
@@ -125,6 +125,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2018-05-07</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2018-05-08</footer>
   </body>
 </html>
