Added province info

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <dd class="clear"></dd> <dt>Education</dt>
         <dd>
           <ul> 
-            <li>2013/07, Master Degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>
-            <li>2008/07, Bachelor Degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
+            <li>2013/07, Master Degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, Shanxi, China</li>
+            <li>2008/07, Bachelor Degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, Shanxi, China</li>        
           </ul>
         </dd> 
       <dd class="clear"></dd> <dt>Certificates</dt> 
