--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div> 
       <div id="objective"> 
         <p>
-          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 5 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
+          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 5 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
         </p> 
       </div> 
       <div class="clear"></div>
