--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Life Science Analytics Framework (LSAF)</li> 
             </ul>
           <b>Programming and Script Language</b> 
-            <p>Perl, Powershell, Python, R, HTML</p>
+            <p>Python, R, Bash Shell, PowerShell, <strike>Perl</strike>, HTML</p>
           <b>Relational Database and Operation System</b> 
             <ul> 
               <li>SQL Server, Access</li> 
