--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       <dd class="clear"></dd> <dt>Experience</dt> 
         <dd> 
           <ul>
-            <li>2016/11 - Present, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2018/11 - Present, Principal Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2016/11 - 2018/10, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
             <li>2014/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
             <li>2013/7 - 2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
             <li>2013/4 - 2013/6, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
@@ -125,6 +126,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2018-05-08</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2018-11-07</footer>
   </body>
 </html>
