--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
           <ul>
             <li>2018/11 - Present, Principal Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
             <li>2016/11 - 2018/10, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
-            <li>2014/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
-            <li>2013/7 - 2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-            <li>2013/4 - 2013/6, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
+            <li>2015/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2014/11 - 2015/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2013/07 - 2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2013/04 - 2013/06, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
           </ul>
         </dd> 
       <dd class="clear"></dd> <dt>Papers</dt>
