--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
            <a target="_blank" href="https://github.com/xianhuazeng">
            <img title="Github" alt="Github icon" src="images/github.png" /></a>
            <a target="_blank" href="https://twitter.com/xianhuazeng">
-           <img title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a>
-           <a target="_blank" href="http://plus.google.com/u/0/106689784596989502614/about">
-           <img title="Google+" alt="Google+ icon" src="images/google.png" /></a><br />        
+           <img title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a><br />        
            Email:&nbsp;<a href="mailto:huazizeng@gmail.com"><img alt="Xianhua Zeng" style="margin-bottom:-5px" src="images/email.png"/></a>
         </p> 
       </div> 
@@ -106,7 +104,7 @@
               <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Life Science Analytics Framework (LSAF)</li> 
             </ul>
           <b>Programming and Script Language</b> 
-            <p>Python, R, Bash Shell, PowerShell, <strike>Perl</strike>, HTML</p>
+            <p>Python, Bash Shell, PowerShell, <strike>R</strike>, <strike>Perl</strike>, HTML</p>
           <b>Relational Database and Operation System</b> 
             <ul> 
               <li>SQL Server, Access</li> 
@@ -127,6 +125,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2018-11-07</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2019-02-25</footer>
   </body>
 </html>
