Added operating system to Skills

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
               <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Life Science Analytics Framework (LSAF)</li> 
             </ul>
           <b>Programming and Script Language</b> 
-            <p>Python, Bash Shell, PowerShell, <strike>R</strike>, <strike>Perl</strike>, HTML</p>
+            <p>Python, Bash Shell, PowerShell, R, <strike>Perl</strike>, HTML</p>
           <b>Relational Database and Operation System</b> 
             <ul> 
               <li>SQL Server, Access</li> 
-              <li>Windows, Linux (Ubuntu)</li> 
+              <li>HP-UX, Solaris, Linux (Ubuntu), Windows</li> 
             </ul>
           <b>Domain Knowledge</b> 
             <ul> 
